--- a/src/styles/_variables.sass
+++ b/src/styles/_variables.sass
@@ -55,13 +55,17 @@ $color-institucional-terciario: #E5782D
 
 // Colores Curso ---------------------------------------
 
-$color-primario: #EAF4FF
-$color-secundario: #F5E9A1
-$color-terciario: #E5F0F6
-$color-acento-contenido: #E6D567
-$color-acento-botones: #FFCD0D
+$color-primario: #FE8953
+$color-secundario: #FFDD33
+$color-terciario: #C63E3E
+$color-acento-contenido: #4DD4E9
+$color-acento-botones: #FE8953
 $color-adicional-1: #FDFCF5
 $color-adicional-2: #E5F0F6
+
+// Colores Slyder
+$bg-fondo-slider: #8A4A2D !important
+$bg-bullets-slider-activo: #FE8953 !important
 
 // Color Tipografias -----------------------------------
 $color-headers: $color-sistema-texto
@@ -77,7 +81,7 @@ $color-link-hover: darken($color-primario, 25%)
 
 // Color Botones ---------------------------------------
 $color-btn-fondo: $color-acento-botones
-$color-btn-texto: $color-primario
+$color-btn-texto: $color-sistema-texto
 
 // Colores banner --------------------------------------
 $color-banner-fondo: $color-primario
@@ -203,7 +207,7 @@ $tarjeta-avatar-ancho-img: 150px
 // VARIABLES DE COMPATIBILIDAD -------------------------
 // -----------------------------------------------------
 
-$color-btn-b-fondo: $color-acento-contenido
+$color-btn-b-fondo: $color-acento-botones
 $color-btn-b-texto: $white
 
 $app-fondo: #EDF3FC
