se finaliza maquetación

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -39,7 +39,9 @@
   &-2
     background-color: #E8EEFD
   &-3
-    background-color: #FFF8D5
+    background-color: #FFF8D5 
+  &-4
+    background-color: #FEF2EC
 
   &-sintesis
     background-color: #F9F9F9
