--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -42,6 +42,8 @@
     background-color: #FFF8D5 
   &-4
     background-color: #FEF2EC
+  &-5
+    background-color: #EDEDED
 
   &-sintesis
     background-color: #F9F9F9
@@ -217,3 +219,21 @@ $custom-card-img-height: 224px
   background-color: #8A4A2D
 .mn 
   margin: 0 -3rem
+
+
+.material-complementario
+  p,a
+    font-size: 1rem !important
+  a
+    text-decoration: none
+    color: $color-sistema-texto
+
+.border-top.color-primario
+  border-top: 5px solid $color-primario !important
+
+.material-complementario
+  p,a
+    font-size: 1rem !important
+  a
+    text-decoration: none
+    color: $color-sistema-texto
